[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "nonebot_plugin_speakrank_baize"
version = "1.0.0"
description = "NoneBot2 群聊发言活跃统计插件，自动记录群消息并生成排行榜卡片图"
license = { text = "MIT" }
authors = [{ name = "Baize", email = "2491434931@qq.com" }]
readme = "README.md"
keywords = ["nonebot", "nonebot2", "speak", "rank", "statistics", "group"]
requires-python = ">=3.10"
dependencies = [
  "nonebot2>=2.2.0",
  "nonebot-plugin-apscheduler>=0.4.0",
  "Pillow>=9.0",
  "aiosqlite>=0.19",
  "httpx>=0.23"
]

[project.urls]
Homepage = "https://github.com/sangonomiya249/nonebot_plugin_speakrank_baize"
Repository = "https://github.com/sangonomiya249/nonebot_plugin_speakrank_baize"

[project.entry-points."nonebot2.plugin"]
nonebot_plugin_speakrank_baize = "nonebot_plugin_speakrank_baize:__plugin_meta__"
